@@ -80,7 +80,7 @@ class TestUpdate(unittest.TestCase):
             with_=[w],
             values=[w.select(w.c3, where=w.c4 == 2)])
         self.assertEqual(str(query),
-            'WITH b AS (SELECT "c"."c1" FROM "t1" AS "c") '
-            'UPDATE "t" SET "c2" = (SELECT "b"."c3" FROM b AS "b" '
+            'WITH "b" AS (SELECT "c"."c1" FROM "t1" AS "c") '
+            'UPDATE "t" SET "c2" = (SELECT "b"."c3" FROM "b" AS "b" '
             'WHERE ("b"."c4" = %s))')
         self.assertEqual(query.params, (2,))
